SourceCode/UFHT Beta v1.14 (beta 3)/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Count__c</fullName>
        <label>Child Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateTime1__c</fullName>
        <label>DateTime1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime2__c</fullName>
        <label>DateTime2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime3__c</fullName>
        <label>DateTime3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LongText1__c</fullName>
        <label>LongText1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText2__c</fullName>
        <label>LongText2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText3__c</fullName>
        <label>LongText3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestAutoNumber__c</fullName>
        <displayFormat>A-{00000}</displayFormat>
        <label>TestAutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TestEncriptedField__c</fullName>
        <label>TestEncriptedField</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TestFormulaString__c</fullName>
        <formula>Name&amp; &quot;,&quot;&amp; AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestFormulaString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestGeoLocation__c</fullName>
        <label>TestGeoLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>TestRTA1__c</fullName>
        <label>TestRTA1</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TestRTA2__c</fullName>
        <label>TestRTA2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TestRTA3__c</fullName>
        <label>TestRTA3</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TextArea1__c</fullName>
        <label>TextArea1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextArea2__c</fullName>
        <label>TextArea2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextArea3__c</fullName>
        <label>TextArea3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TextField1__c</fullName>
        <label>TextField1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextField2__c</fullName>
        <label>TextField2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextField3__c</fullName>
        <label>TextField3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Last Time Updated Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zcat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zcat</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sample</fullName>
        <active>false</active>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>Validation error occured</errorMessage>
    </validationRules>
</CustomObject>